[package]
name = "inspire-live"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/app",
    "src/display",
    "src/sil",
    "src/slides",
]

[dependencies]
app = { path="src/app" }
display = { path="src/display" }
slides = { path="src/slides" }
root_path = { path="src/root_path" }
sil = { path="src/sil" }

bevy = { version = "0.10.1", default-features=false, features = [
     # "android_shared_stdcxx",
     # "animation",
     # "bevy_animation",
     # "bevy_asset",
     # "bevy_audio",
     "bevy_core_pipeline",
     # "bevy_gilrs",
     # "bevy_gltf",
     # "bevy_pbr",
     # "bevy_render",
     # "bevy_scene",
     # "bevy_sprite",
     # "bevy_text",
     # "bevy_ui",
     # "bevy_winit",
     # "filesystem_watcher",
     # "hdr",
     # "ktx2",
     # "png",
     # "tonemapping_luts",
     # "vorbis",
     "x11",
     # "zstd",
]}
bevy_egui = { version = "0.20.2", default-features=false, features=[
    "default_fonts"
]}
egui = { version = "0.21.0", default-features = false, features=[] }
