[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
path = "app.rs"

[dependencies]
display = { path = "../display" }
slides = { path = "../slides" }
root_path = { path = "../root_path" }

bevy = { version = "0.10.1", default-features=false, features = [] }
bevy_egui = { version = "0.20.2", default-features = false, features = [] }
egui = { version = "0.21.0", default-features = false, features = [] }
