[package]
name = "root_path"
version = "0.1.0"
edition = "2021"

[lib]
path = "root_path.rs"

[dependencies]
bevy = { version = "0.10.1", default-features=false, features = [
     # "android_shared_stdcxx",
     # "animation",
     # "bevy_animation",
     # "bevy_asset",
     # "bevy_audio",
     "bevy_core_pipeline",
     # "bevy_gilrs",
     # "bevy_gltf",
     # "bevy_pbr",
     "bevy_render",
     # "bevy_scene",
     "bevy_sprite",
     # "bevy_text",
     "bevy_ui",
     "bevy_winit",
     # "filesystem_watcher",
     # "hdr",
     # "ktx2",
     # "png",
     # "tonemapping_luts",
     # "vorbis",
     "x11",
     "zstd",
]}
